--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ project(LowpolyGen)
 set(CMAKE_BUILD_TYPE "Release")
 set(CMAKE_CXX_STANDARD 17)
 
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "GLFW lib only")
+set(GLFW_INSTALL OFF CACHE BOOL "GLFW lib only")
+add_subdirectory(third-party/glfw-3.3.7)
+
 add_subdirectory(renderer)
 add_subdirectory(algorithms)
 add_subdirectory(demo)
