--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -10,4 +10,5 @@ file(GLOB SRC_FILES src/*.cc)
 include_directories(include)
 add_library(Renderer STATIC ${GLAD_SRC} ${SRC_FILES})
 target_include_directories(Renderer PRIVATE ${GLAD_DIR}/include ${GLFW_DIR}/include)
-target_link_libraries(Renderer PRIVATE Eigen3::Eigen glfw3)
+target_link_directories(Renderer PRIVATE ${CMAKE_SOURCE_DIR}/build/third-party/glfw-3.3.7)
+target_link_libraries(Renderer PRIVATE Eigen3::Eigen glfw)
