--- a/algorithms/CMakeLists.txt
+++ b/algorithms/CMakeLists.txt
@@ -7,12 +7,12 @@ set(CMAKE_BUILD_TYPE "Release")
 find_package(CGAL REQUIRED)
 find_package(Eigen3 REQUIRED NO_MODULE)
 
-file(GLOB LIB_SOURCE src/*.cc)
+file(GLOB LIB_SOURCE src/*.cc src/*.hpp)
 file(GLOB LIB_HDRS include/engine/*.h)
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 add_library(Engine SHARED ${LIB_SOURCE})
 
-include_directories(${CMAKE_SOURCE_DIR}/renderer/include include)
+include_directories(include)
 include(${CMAKE_SOURCE_DIR}/third-party/third-party.cmake)
-target_include_directories(Engine PRIVATE ${GLAD_DIR}/include ${GLFW_DIR}/include)
+target_include_directories(Engine PRIVATE ${GLAD_DIR}/include ${GLFW_DIR}/include ${CMAKE_SOURCE_DIR}/renderer/include)
 target_link_libraries(Engine PRIVATE CGAL::CGAL Eigen3::Eigen Renderer)
